# crs-sample-hybrid

./: .dockerignore  README.md  orchestrator.py  pyproject.toml
agents/: claude_code.md  claude_code.py  template.py
agents/sections/: diff_absent.md  diff_present.md  pre_submit.md  seed_sharing.md  seeds_present.md  workflow_find.md
agents/skills/rebuild-harness/: SKILL.md
agents/skills/verify-candidate/: SKILL.md
crshybrid/: __init__.py  cli.py  config.py  dedup.py  fuzzer.py  harness.py  seedshare.py  submitter.py
oss-crs/: builder.Dockerfile  crs.yaml  example-compose.yaml  orchestrator.Dockerfile
