[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crs-sample-hybrid"
version = "1.0.0"
description = "Hybrid CRS: coverage-guided fuzzer + Claude Code agent with stack-based crash deduplication"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
run_orchestrator = "orchestrator:main"
crs-verify = "crshybrid.cli:verify_main"

[tool.setuptools]
py-modules = ["orchestrator"]

[tool.setuptools.packages.find]
include = ["crshybrid", "crshybrid.*", "agents", "agents.*"]

[tool.setuptools.package-data]
agents = ["*.md", "sections/*.md", "skills/*/SKILL.md"]
